@@ -1,11 +1,7 @@
-/*  DVIPDFMx, an eXtended version of DVIPDFM by Mark A. Wicks.
+/* This is dvipdfmx, an eXtended version of dvipdfm by Mark A. Wicks.
 
-    Copyright (C) 2002-2016 by Jin-Hwan Cho, Matthias Franz, and Shunsaku Hirata,
-    the DVIPDFMx project team.
-    
-    Copyright (c) 2006 SIL. (xdvipdfmx extensions for XeTeX support)
-
-    Copyright (C) 1998, 1999 by Mark A. Wicks <mwicks@kettering.edu>
+    Copyright (C) 2002-2016 by Jin-Hwan Cho and Shunsaku Hirata,
+    the dvipdfmx project team.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -22,15 +18,13 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
 */
 
-#ifndef _DVIPDFMX_H_
-#define _DVIPDFMX_H_
+#ifndef _SPC_DVIPDFMX_H_
+#define _SPC_DVIPDFMX_H_
 
-extern int compat_mode;
-extern int is_xdv;
-extern int translate_origin;
-extern const char *my_name;
+#include "specials.h"
 
-extern int extractbb(int argc, char *argv[]);
-extern void read_config_special(const char **start, const char *end);
+extern int spc_dvipdfmx_check_special (const char *buf, int len);
+extern int spc_dvipdfmx_setup_handler (struct spc_handler *sph,
+				       struct spc_env *spe, struct spc_arg *ap);
 
-#endif /* _DVIPDFMX_H_ */
+#endif /* _SPC_DVIPDFMX_H_ */
